<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#001419"
    tools:context=".AddPostActivity">

    <ImageView
        android:id="@+id/dogPictureOne"
        android:layout_width="190dp"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="10dp"
        app:layout_constraintEnd_toStartOf="@+id/dogPictureTwo"
        app:srcCompat="@drawable/ic_littledog3" />

    <ImageView
        android:id="@+id/dogPictureTwo"
        android:layout_width="190dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dogPictureOne"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_littledogsquare" />

    <TextView
        android:id="@+id/add_post_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="100dp"
        android:maxLines="2"
        android:text="@string/add_post_description"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dogPictureOne"
        app:layout_constraintVertical_bias="0.067" />

    <EditText
        android:id="@+id/add_post_description_plain_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/add_post_description_hint"
        android:maxLines="20"
        android:minLines="2"
        android:scrollbars="vertical"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_post_description" />

    <TextView
        android:id="@+id/add_post_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="100dp"
        android:maxLines="2"
        android:text="@string/add_post_date"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_post_description_plain_text"
        app:layout_constraintVertical_bias="0.048" />

    <DatePicker
        android:id="@+id/add_post_date_plain_text"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/add_post_description_hint"
        android:maxLines="20"
        android:minLines="2"
        android:scrollbars="vertical"
        android:textColorHint="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_post_date" />

    <TextView
        android:id="@+id/add_post_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="100dp"
        android:maxLines="2"
        android:text="@string/add_post_time"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_post_date_plain_text"
        app:layout_constraintVertical_bias="0.067" />

    <EditText
        android:id="@+id/add_post_time_plain_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/add_post_time_hint"
        android:maxLines="20"
        android:minLines="2"
        android:scrollbars="vertical"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_post_time" />

    <Button
        android:id="@+id/button_add_post"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_bg"
        android:text="Add"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_cancel_post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_post_time_plain_text"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_cancel_post"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_bg"
        android:text="Cancel"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_add_post"
        app:layout_constraintTop_toBottomOf="@id/add_post_time_plain_text"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>