<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#001419"
    android:id="@+id/add_post_fragment"
    tools:context=".AddPostFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/dogPictureOne"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="22dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_littledog3" />

        <ImageView
            android:id="@+id/dogPictureTwo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.275"
            app:layout_constraintStart_toEndOf="@+id/dogPictureOne"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_littledogsquare" />

        <TextView
            android:id="@+id/add_post_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="@string/add_post_description"
            android:textAlignment="viewStart"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            app:layout_constraintHorizontal_bias="0.019"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dogPictureOne"
            app:layout_constraintVertical_bias="0.067" />

        <EditText
            android:id="@+id/add_post_description_plain_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/add_post_description_hint"
            android:maxLines="5"
            android:minLines="1"
            android:scrollbars="vertical"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_post_description" />

        <TextView
            android:id="@+id/add_post_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:text="@string/add_post_date"
            android:textAlignment="viewStart"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_post_description_plain_text"
            app:layout_constraintVertical_bias="0.048" />

        <Button
            android:id="@+id/pick_date_post"
            android:layout_width="100dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_bg"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_post_date"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:text="pick date"/>

        <TextView
            android:id="@+id/add_post_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="17dp"
            android:text="@string/add_post_time"
            android:textAlignment="viewStart"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:layout_constraintHorizontal_bias="0.019"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pick_date_post"
            app:layout_constraintVertical_bias="0.067" />

        <Button
            android:id="@+id/pick_time_post"
            android:layout_width="100dp"
            android:text="pick time"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_post_time"
            android:background="@drawable/btn_bg"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_add_post"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn_bg"
            android:text="Add"
            android:layout_marginStart="100dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pick_time_post"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_cancel_post"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/btn_bg"
            android:text="Cancel"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_add_post"
            app:layout_constraintTop_toBottomOf="@id/pick_time_post"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>